@@ -1,3 +1,7 @@
+2008-05-12  Badlop  <badlop@process-one.net>
+
+	* src/mod_muc_admin.erl: Added new function: change_room_option/4
+
 2008-05-06  Badlop  <badlop@process-one.net>
 
 	* src/mod_muc_admin.erl: New exported functions create_room and
